# libtouchpad

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  libtouchpad.pc.in
doc/: .gitignore  Makefile.am  libtouchpad.doxygen.in
include/: Makefile.am
include/ccan/argcheck/: argcheck.h
src/: Makefile.am  touchpad-button.c  touchpad-config.c  touchpad-config.h  touchpad-events.c  touchpad-filter.c  touchpad-int.h  touchpad-phys-button.c  touchpad-scroll.c  touchpad-tap.c  touchpad-util.h  touchpad.c  touchpad.h
test/: .gitignore  Makefile.am  test-build-pedantic.c  test-buttons.c  test-common.c  test-common.h  test-config.c  test-device.c  test-events.c  test-scroll.c  test-tap.c  tptest-bcm5974.c  tptest-bcm5974.h  tptest-int.h  tptest-synaptics-non-mt.c  tptest-synaptics-non-mt.h  tptest-synaptics.c  tptest-synaptics.h  tptest.c  tptest.h
tools/: .gitignore  Makefile.am  touchpad-edge-detector.c  touchpad-monitor.c
xorg/: Makefile.am  xf86-input-touchpad.c  xorg-touchpad.pc.in
